# trueseeing

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  AGENTS.md  Dockerfile  MANIFEST.in  README.md  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  wercker.yml
.github/: FUNDING.yml
.github/workflows/: build.yaml  deploy.yaml  lint.yaml  publish.yaml  stale.yaml
api/: setup.py
api/trueseeing/api/: agent.py  genkey.py
cli/: MANIFEST.in  setup.py  twisted.cfg
cli/trueseeing/api/: client.py
core/: setup.py
core/trueseeing/: context.py  grab.py  patch.py  shell.py  store.py
core/trueseeing/flow/: data.py
core/trueseeing/libs/: store.1.sql
core/trueseeing/signature/: fingerprint.py  privacy.py  security.py
core/trueseeing/tests/flow/: test_data.py
doc/client/: README.rst
setup/: agent.py  client.cfg  client.py  core.py  server.py  standalone.py  trueseeing.py  trueseeingd.py
src/client/trueseeing/api/: client.py  client_twisted.py
src/core/trueseeing/: context.py  issue.py  literalquery.py  shell.py
src/core/trueseeing/flow/: data.py
src/core/trueseeing/libs/: store.0.sql  store.1.sql
src/core/trueseeing/signature/: fingerprint.py
src/server/trueseeing/api/: agent.py  server.py
src/standalone/trueseeing/: shell.py
t/: query.py  query2.py  query3.sql
tests/: test_db.py  test_shell.py
trueseeing/: __init__.py  _dummy.py  api.py  context.py  cvss.py  exploit.py  fingerprint.py  grab.py  issue.py  literalquery.py  patch.py  report.py  shell.py  signatures.py  smali.py  store.py  tools.py
trueseeing/api/: api.py  cli.py  genkey.py
trueseeing/app/: __init__.py  _dummy.py  boot.py  exploit.py  fingerprint.py  grab.py  inspect.py  patch.py  scan.py  shell.py
trueseeing/app/cmd/: __init__.py  alias.py  analyze.py  asm.py  config.py  exploit.py  info.py  report.py  scan.py  search.py  show.py
trueseeing/app/cmd/android/: analyze.py  asm.py  device.py  engage.py  exploit.py  info.py  recon.py  search.py  show.py
trueseeing/app/cmd/ios/: asm.py  engage.py  recon.py
trueseeing/code/: model.py  parse.py
trueseeing/core/: __init__.py  analyze.py  api.py  asm.py  config.py  context.py  cvss.py  db.py  device.py  env.py  exc.py  ext.py  issue.py  literalquery.py  nat.py  patch.py  report.py  scan.py  sign.py  store.py  tools.py  ui.py  z.py
trueseeing/core/analysis/: flow.py  smali.py
trueseeing/core/android/: asm.py  context.py  db.py  device.py  model.py  store.py  tools.py
trueseeing/core/android/analysis/: flow.py  nat.py  op.py  smali.py
trueseeing/core/android/analyze/: flow.py  nat.py
trueseeing/core/code/: model.py  op.py  parse.py
trueseeing/core/flow/: code.py  data.py
trueseeing/core/ios/: analyze.py  context.py  db.py  device.py  model.py  store.py  swift.py
trueseeing/core/model/: cmd.py  context.py  issue.py  sig.py
trueseeing/flow/: code.py  data.py
trueseeing/libs/: LICENSE.md  files.0.sql  nsc.xml  store.0.sql  store.1.sql  store.s.sql  tlds.txt
trueseeing/libs/android/: frida-app.smali  frida-scriptdir.config  store.0.sql  store.1.sql
trueseeing/libs/container/: Dockerfile  Dockerfile-zipalign  asm.py  build.sh  disasm.py  genkey.py  resign.py  sign.py  unsign.py  zipalign.py
trueseeing/libs/ios/: store.0.sql  store.1.sql
trueseeing/libs/template/: report.html
trueseeing/sig/: __init__.py  crypto.py  fingerprint.py  manifest.py  privacy.py  security.py
trueseeing/sig/android/: crypto.py  fingerprint.py  manifest.py  nat.py  privacy.py  security.py
trueseeing/sig/ios/: base.py
trueseeing/signature/: base.py  battery.py  crypto.py  denial.py  fingerprint.py  manifest.py  privacy.py  security.py
trueseeing/template/: report.html
trueseeing/tests/: test_context.py  test_trueseeing.py
trueseeing/tests/core/: test_context.py
trueseeing/tests/flow/: test_data.py
trueseeing/tests/signature/: test_base.py  test_security.py
