[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = 'trueseeing'
authors = [
  {name='Takahiro Yoshimura', email='altakey@gmail.com'}
]
classifiers = [
    "Topic :: Security",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Android",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
readme = "README.md"
keywords = ['android', 'security', 'pentest', 'hacking']
dependencies = [
    "lxml~=5.0",
    "pyyaml~=6.0",
    "jinja2~=3.1",
    "attrs~=23.2",
    "pypubsub~=4.0",
    "termcolor~=2.4",
    "progressbar2~=4.3",
    "importlib_metadata~=7.0",
    "asn1crypto~=1.5",
]
requires-python = ">=3.9"
dynamic = ['version', 'description']

[project.optional-dependencies]
dev = [
  "mypy~=1.7",
  "pyproject-flake8~=6.1",
  "typing_extensions~=4.1",
]

[project.urls]
Source = "https://github.com/alterakey/trueseeing"

[project.scripts]
trueseeing = "trueseeing.app.shell:entry"

[tool.mypy]
strict = true
show_error_codes = true
enable_error_code = "redundant-expr"

[[tool.mypy.overrides]]
module = [
  "lxml.*",
  "jinja2",
  "pubsub",
  "asn1crypto.*",
]
ignore_missing_imports = true

# pyproject-flake8 (pflake8)
[tool.flake8]
extend-ignore = "E301,E302,E265,E114,E501,E231,E252,E261,E701,E722,E741"
indent-size = 2
