[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = 'trueseeing'
authors = [
  {name='Takahiro Yoshimura', email='alterakey@protonmail.com'}
]
classifiers = [
    "Topic :: Security",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Android",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
readme = "README.md"
keywords = ['ios', 'android', 'security', 'pentest', 'hacking']
dependencies = [
    "aiohttp~=3.14",
    "asn1crypto~=1.5",
    "frida-tools~=13.6",
    "importlib-metadata~=7.0",
    "jinja2~=3.1",
    "lief~=0.17",
    "lxml~=6.1",
    "progressbar2~=4.3",
    "prompt-toolkit~=3.0",
    "pyaxmlparser~=0.3",
    "pypubsub~=4.0",
    "pyyaml~=6.0",
    "pyzstd~=0.16",
    "termcolor~=2.4",
]
requires-python = ">=3.13"
dynamic = ['version', 'description']

[project.urls]
Source = "https://github.com/alterakey/trueseeing"

[project.scripts]
trueseeing = "trueseeing.app.shell:entry"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
  "lxml.*",
  "jinja2",
  "pubsub",
  "asn1crypto.*",
  "pyaxmlparser.*",
]
ignore_missing_imports = true

# zuban (type checker; mypy-compatible mode)
[tool.zuban]
mode = "mypy"
strict = true
show_error_codes = true
enable_error_code = "redundant-expr"

# ruff (linter)
[tool.ruff]
target-version = "py39"
indent-width = 2

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E301", "E302", "E265", "E114", "E501", "E231", "E252", "E261", "E701", "E722", "E741", "F601"]

[dependency-groups]
dev = [
    "flit>=3.12.0",
    "ruff>=0.11.0",
    "types-pygments>=2.19.0.20250809",
    "typing_extensions~=4.12",
    "zuban>=0.7.2",
]
